# parallel-computing

cuda/: CMakeLists.txt  cuda1.cu  cuda2.cu  dot.cu  dynamic  dynamic.c  matrix.cu  vecDOT3.cu
cuda/TM/: CMakeLists.txt  matching.cu  template_matching.c
cuda/blur/: Blur_CPU.c  Blur_GPU.cu  Blur_Gray.c  CMakeLists.txt  CPU_trackbar.cpp  GPU_trackbar.cu  blur.c  example.c  example.cpp  noG.c  noG_GPU.cu  test.c
mpi/: README.md  greetings  greetings.c  hello_world  hello_world.c  matrix_multiplication.c  parallel_trapezoid  parallel_trapezoid.c  serial_dot  serial_dot.c  serial_trapezoid  serial_trapezoid.c
pthread/: README.md  example1  example1.c  example2  example2.c
